Clean up exception assertions
Closes #22